style: enhance highlighted stories layout with image container, fix grid layout issues and adjust footer positioning

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -22,24 +22,24 @@ $font-extrabold: 800;
 // Based on a 7.5px baseline (1rem = 15px, 0.5rem = 7.5px)
 $base-spacing: 1rem; // 15px
 
-$spacing-none: 0;        // 0px
-$spacing-xxs:  0.25rem;  // 3.75px  (0.25 * 15)
-$spacing-xs:   0.5rem;  // 7.5px   (0.5 * 15)
-$spacing-sm:   0.75rem;  // 11.25px (0.75 * 15)
-$spacing-md:   1rem;    // 15px    (1 * 15)
-$spacing-lg:   1.5rem;  // 22.5px  (1.5 * 15)
-$spacing-xl:   2rem;    // 30px    (2 * 15)
-$spacing-xxl:  3rem;    // 45px    (3 * 15)
-$spacing-xxxl: 4rem;    // 60px    (4 * 15)
+$spacing-none: 0; // 0px
+$spacing-xxs: 0.25rem; // 3.75px  (0.25 * 15)
+$spacing-xs: 0.5rem; // 7.5px   (0.5 * 15)
+$spacing-sm: 0.75rem; // 11.25px (0.75 * 15)
+$spacing-md: 1rem; // 15px    (1 * 15)
+$spacing-lg: 1.5rem; // 22.5px  (1.5 * 15)
+$spacing-xl: 2rem; // 30px    (2 * 15)
+$spacing-xxl: 3rem; // 45px    (3 * 15)
+$spacing-xxxl: 4rem; // 60px    (4 * 15)
 
 // Font sizes
-$font-size-xs: 0.75rem;    // 11.25px (0.75 * 15)
-$font-size-sm: 0.875rem;   // 13.125px (0.875 * 15)
-$font-size-base: 1rem;    // 15px (1 * 15)  -  Typically the base font size
-$font-size-lg: 1.125rem;  // 16.875px (1.125 * 15)
-$font-size-xl: 1.25rem;   // 18.75px (1.25 * 15)
-$font-size-h3: 1.5rem;   // 22.5px (1.5 * 15) -  Heading 3
-$font-size-h2: 2rem;     // 30px (2 * 15)   -  Heading 2
+$font-size-xs: 0.75rem; // 11.25px (0.75 * 15)
+$font-size-sm: 0.875rem; // 13.125px (0.875 * 15)
+$font-size-base: 1rem; // 15px (1 * 15)  -  Typically the base font size
+$font-size-lg: 1.125rem; // 16.875px (1.125 * 15)
+$font-size-xl: 1.25rem; // 18.75px (1.25 * 15)
+$font-size-h3: 1.5rem; // 22.5px (1.5 * 15) -  Heading 3
+$font-size-h2: 2rem; // 30px (2 * 15)   -  Heading 2
 $font-size-h1: 2.5rem;
 
 // Media queries
@@ -53,6 +53,6 @@ $breakpoint-extra-large: 112.5em; // 1800px
 }
 
 body {
+  position: relative;
   font-family: $font-primary;
-  overflow: hidden;
 }
