--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,11 +1,14 @@
 .footer {
-  position: absolute;
-  bottom: 0;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
   background-color: $color-neutral-very-dark-blue;
   padding: $spacing-md;
   font-size: 11px;
   text-align: center;
   color: $color-neutral-off-white;
+  overflow: hidden;
 
   .container{
     width: min(90%, 1111px);
